--- a/a-bootiful-client-qa.properties
+++ b/a-bootiful-client-qa.properties
@@ -1,5 +1,5 @@
 message = Hello world12
 key = value
 qakey=qavalue
-user.role=Developer
-user.password=pass
+user.role=Developer1
+user.password=pass1
